# cpp-sort

./: .gitignore  CMakeLists.txt  README.md  sortirovki.sln
include/: Sortirovki.h  sortings.h
sample/: BubbleAlgorithm.cpp
sortirovki/: BubbleAlgorithm.cpp  sortirovki.vcxproj  sortirovki.vcxproj.filters
sortirovki/Debug/: sortirovki.exe.recipe  sortirovki.ilk  vc142.idb
sortirovki/Debug/sortirovki.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sortirovki.lastbuildstate
